<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_foreground"
    android:columnCount="4"
    tools:context=".CalculatorActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:layout_marginTop="@dimen/margin_top"
        android:textSize="@dimen/result_size"
        android:layout_gravity="fill_horizontal"
        android:paddingVertical="@dimen/padding_text"
        android:gravity="end"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key7"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_columnWeight="1"
        android:onClick="appendText"
        android:text="@string/key7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key8"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_columnWeight="1"
        android:onClick="appendText"
        android:text="@string/key8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key9"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_columnWeight="1"
        android:onClick="appendText"
        android:text="@string/key9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/division"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_columnWeight="1"
        android:onClick="operators"
        android:text="@string/division" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key4"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_columnWeight="1"
        android:onClick="appendText"
        android:text="@string/key4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key5"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_columnWeight="1"
        android:onClick="appendText"
        android:text="@string/key5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key6"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_columnWeight="1"
        android:onClick="appendText"
        android:text="@string/key6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/multiplier"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_columnWeight="1"
        android:onClick="operators"
        android:text="@string/multiplier" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_columnWeight="1"
        android:onClick="appendText"
        android:text="@string/key1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_columnWeight="1"
        android:onClick="appendText"
        android:text="@string/key2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key3"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_columnWeight="1"
        android:onClick="appendText"
        android:text="@string/key3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_columnWeight="1"
        android:onClick="operators"
        android:text="@string/minus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_columnWeight="1"
        android:onClick="operators"
        android:text="@string/plus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key0"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_columnWeight="1"
        android:onClick="appendText"
        android:text="@string/key0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dot"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_columnWeight="1"
        android:onClick="appendText"
        android:text="@string/dot" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/equals"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_columnWeight="1"
        android:text="@string/equals" />


</GridLayout>